# local-wind

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: bake.yml  obs.yml
data/obs/: 2026-07.parquet
docs/: HANDOFF.md  PLAN.md  research-wind-forecast.md  ux-redesign.md
pipeline/: pyproject.toml
pipeline/src/localwind/: __init__.py  bake.py  config.py  export_obs.py  fetch.py  obs.py  plot_once.py  spot_series.py
web/: index.html  package-lock.json  package.json
web/src/: main.ts  openmeteo.ts  palette.ts  sheet.ts  spots.ts  state.ts  style.css  timeline.ts
