[project]
name = "localwind"
version = "0.1.0"
description = "HRRR wind pipeline for the South Bay local wind map"
requires-python = ">=3.11"
dependencies = [
    "herbie-data>=2024.8.0",
    "xarray>=2024.1.0",
    "cfgrib>=0.9.14",
    "eccodes>=2.38.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "pillow>=10.0",
    "requests>=2.31",
    "pyarrow>=15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/localwind"]
